[gd_scene load_steps=2 format=3 uid="uid://qc8ty4h0dxkg"]

[ext_resource type="Script" path="res://src/states/menus/credits_menu.gd" id="1"]

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="H" type="HBoxContainer" parent="M"]
layout_mode = 2

[node name="CreditsRichLabel" type="RichTextLabel" parent="M/H"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center]
[outline_color=black]
[outline_size=12][b]Terry Hearst[/b][/outline_size]
Programming
Design

[outline_size=12][b]Andrew Moore[/b][/outline_size]
Programming
Design
Sound Effects

[outline_size=12][b]Kyle Reese[/b][/outline_size]
Programming
Design
[/outline_color]
[/center]"
fit_content = true

[node name="TabContainer" type="TabContainer" parent="M/H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Licenses" type="MarginContainer" parent="M/H/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="LicensesLabel" type="RichTextLabel" parent="M/H/TabContainer/Licenses"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="All Third Party Licenses" type="MarginContainer" parent="M/H/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ThirdPartyLabel" type="RichTextLabel" parent="M/H/TabContainer/All Third Party Licenses"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="M/H"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="M"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[connection signal="pressed" from="M/BackButton" to="." method="back_to_menu"]
